--- a/website/css/spacepaper.css
+++ b/website/css/spacepaper.css
@@ -4,7 +4,7 @@ html {
 
 body {
   height: 100%;
-  background-color: #212121;
+  background-color: #000000;
   font-family: 'Nunito', sans-serif;
 }
 
@@ -31,4 +31,11 @@ img{
 .card-block {
   background-color: rgba(255, 255, 255, 0) !important;
   border: 0;
+}
+
+#particle_background canvas{
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
 }
